<resources>
    <string name="app_name">ReMi</string>
    <string name="login"><u>Login</u></string>
    <string name="username"><u>Username</u></string>
    <string name="password"><u>Password</u></string>

    <string name="loginPage"><u>login page</u></string>
    <string name="createPost"><u>Create Post</u></string>

    <string name="restful_mind">Restful Mind</string>
    <string name="start_your_relaxation_journey">Start your relaxation journey.</string>
    <string name="sign_up">Sign Up</string>
    <string name="signUpPage">Sign Up Page</string>
    <string name="start_meditation">Start Meditation</string>
    <string name="begin_a_two_minute_breathing_exercise_to_recenter_and_refocus">Begin a two minute breathing exercise to recenter and refocus.</string>
    <string name="breathing_meditation">Breathing Meditation</string>
    <string name="find_a_comfortable_position">Find a comfortable position....</string>
    <string name="Finish_Meditation">Finish Meditation</string>
    <string name="sample_text">Sample text...</string>
    <string name="lotus">lotus</string>
    <string name="register">Register</string>

    <string name="alreadyAccount">Already have an account?</string>
    <string name="noAccount">Don\'t have an account yet?</string>
    <string name="passwordRequirements">Needs upper and lowercase and one number</string>

    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="username2">Username:</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="share">Share</string>
    <string name="add_img">ADD IMG</string>
    <string name="edit_post">Edit Post</string>
    <string name="title">Title</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="change_img">CHANGE IMG</string>
    <string name="sign_up2">Sign up</string>
    <string name="edit">Edit</string>
    <string name="details">details</string>
    <string name="title2">TITLE</string>
    <string name="username3">Username</string>
    <string name="_1">1</string>
    <string name="sample_text">Sample text...</string>
    <string name="heading">HEADING</string>


</resources>