<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorNavyBackgroud">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/loginPage"
        android:textAllCaps="true"
        android:textColor="@color/colorGrey"
        />

    <EditText
        android:id="@+id/usernameLoginEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/username"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        android:backgroundTint="@color/colorGrey"

        />


    <EditText
        android:id="@+id/passwordLoginEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameLoginEt"
        android:layout_marginTop="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"
        android:backgroundTint="@color/colorGrey"

        android:textColorHint="@color/colorGrey" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/passwordLoginEt"
        android:layout_marginTop="50dp"
        android:onClick="loginUser"
        android:background="@drawable/rounded_corners"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>